[tool.poetry]
name = "vmls-code-along"
version = "0.1.0"
description = ""
authors = ["Matej <matouhrin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
polars = "^0.20.31"
ipykernel = "^6.29.4"
plotly = "^5.22.0"
hvplot = "^0.10.0"
scipy = "^1.14.0"
matplotlib = "^3.9.0"
pyvista = "^0.43.10"
vtk = "^9.3.1"
pyqt5 = "^5.15.10"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
